// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component correct styles: variant=cancel 1`] = `
<div>
  <div
    class="react-ripples"
    style="position: relative; display: inline-flex; overflow: hidden;"
  >
    <button
      class="sc-bczRLJ kzKWGJ"
    >
      Войти
    </button>
    <s
      style="position: absolute; border-radius: 50%; opacity: 0; width: 35px; height: 35px; transform: translate(-50%, -50%); pointer-events: none;"
    />
  </div>
</div>
`;

exports[`Button component correct styles: variant=cancel outlined 1`] = `
<div>
  <div
    class="react-ripples"
    style="position: relative; display: inline-flex; overflow: hidden;"
  >
    <button
      class="sc-bczRLJ bgXdgT"
    >
      Войти
    </button>
    <s
      style="position: absolute; border-radius: 50%; opacity: 0; width: 35px; height: 35px; transform: translate(-50%, -50%); pointer-events: none;"
    />
  </div>
</div>
`;

exports[`Button component correct styles: variant=submit 1`] = `
<div>
  <div
    class="react-ripples"
    style="position: relative; display: inline-flex; overflow: hidden;"
  >
    <button
      class="sc-bczRLJ jHWjXU"
    >
      Войти
    </button>
    <s
      style="position: absolute; border-radius: 50%; opacity: 0; width: 35px; height: 35px; transform: translate(-50%, -50%); pointer-events: none;"
    />
  </div>
</div>
`;

exports[`Button component correct styles: variant=submit outlined 1`] = `
<div>
  <div
    class="react-ripples"
    style="position: relative; display: inline-flex; overflow: hidden;"
  >
    <button
      class="sc-bczRLJ exHnfW"
    >
      Войти
    </button>
    <s
      style="position: absolute; border-radius: 50%; opacity: 0; width: 35px; height: 35px; transform: translate(-50%, -50%); pointer-events: none;"
    />
  </div>
</div>
`;

exports[`Button component correct styles: variant=success 1`] = `
<div>
  <div
    class="react-ripples"
    style="position: relative; display: inline-flex; overflow: hidden;"
  >
    <button
      class="sc-bczRLJ bAzGHW"
    >
      Войти
    </button>
    <s
      style="position: absolute; border-radius: 50%; opacity: 0; width: 35px; height: 35px; transform: translate(-50%, -50%); pointer-events: none;"
    />
  </div>
</div>
`;

exports[`Button component correct styles: variant=success outlined 1`] = `
<div>
  <div
    class="react-ripples"
    style="position: relative; display: inline-flex; overflow: hidden;"
  >
    <button
      class="sc-bczRLJ bQFhus"
    >
      Войти
    </button>
    <s
      style="position: absolute; border-radius: 50%; opacity: 0; width: 35px; height: 35px; transform: translate(-50%, -50%); pointer-events: none;"
    />
  </div>
</div>
`;
